Fixed data parser and made tests